--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.javax.persistence.validation.mode=none
 
+paypal.mode=sandbox
+paypal.client.id=ATnJT5rzFbZCvPmd66poCBEV2Z_t8mrzmxN6jqiqoHLGz7j889gwJiHq7AaTSJtcZvw0hiMurhwFGzeW
+paypal.client.secret=EHAbbw4nZ8XJwKjDyx99p4xnx2OstYdzyyQ1daGSXrQIXBnKv7MqJIB7RU_0tTHg6UU6yDRuJx5JuyPD
+
 # image configuration to prevent error to upload
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
